# NutritionCalculator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  main.cpp
doc/html/: doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js
doc/latex/: main_8cpp.tex  refman.tex
tests/: CMakeLists.txt  tests.cpp
